--- a/templates/modern/header.html
+++ b/templates/modern/header.html
@@ -219,7 +219,7 @@
                     <!-- Permissions -->
                     <li class="nav-item">
                         <div class="nav-section-header">
-                            <i class="bi bi-shield-lock me-2"></i>{% trans %}Perms{% endtrans %}
+                            <i class="bi bi-shield-lock me-2"></i>{% trans %}Access{% endtrans %}
                         </div>
                         <ul class="nav nav-pills flex-column ms-3">
                             <li class="nav-item">
