--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -317,11 +317,11 @@
                 <i class="bi bi-person-lock display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
-                <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Permissions{% endtrans %}</h6>
-                <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage permission templates{% endtrans %}</p>
+                <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Access{% endtrans %}</h6>
+                <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage access templates{% endtrans %}</p>
                 <a href="{{ base_url_prefix }}/permissions/templates" class="btn btn-light btn-sm mt-2" data-testid="list-permission-templates-link">
-                    <span class="d-none d-lg-inline">{% trans %}Permissions{% endtrans %}</span>
-                    <span class="d-lg-none">{% trans %}Permissions{% endtrans %}</span>
+                    <span class="d-none d-lg-inline">{% trans %}Access{% endtrans %}</span>
+                    <span class="d-lg-none">{% trans %}Access{% endtrans %}</span>
                 </a>
             </div>
         </div>
