--- a/templates/modern/add_user.html
+++ b/templates/modern/add_user.html
@@ -67,7 +67,7 @@
 
                     {% if user_edit_templ_perm %}
                     <div class="mb-3">
-                        <label for="perm_templ" class="form-label">{% trans %}Permission template{% endtrans %}</label>
+                        <label for="perm_templ" class="form-label">{% trans %}Access template{% endtrans %}</label>
                         <select class="form-select form-select-sm" id="perm_templ" name="perm_templ">
                             {% for template in user_templates %}
                             {% if perm_templ == template['id'] %}
