--- a/templates/modern/edit_user.html
+++ b/templates/modern/edit_user.html
@@ -61,7 +61,7 @@
 
                     {% if edit_templ_perm %}
                     <div class="mb-3">
-                        <label for="perm_templ" class="form-label">{% trans %}Permission template{% endtrans %}</label>
+                        <label for="perm_templ" class="form-label">{% trans %}Access template{% endtrans %}</label>
                         <select class="form-select form-select-sm" id="perm_templ" name="perm_templ">
                             {% for template in permission_templates %}
                             {% if template['id'] == user['tpl_id'] %}
@@ -166,7 +166,7 @@
                     <div class="list-group-item">
                         <h6 class="mb-1"><i class="bi bi-key text-warning me-2"></i>{% trans %}User Permissions{% endtrans %}</h6>
                         <p class="mb-2 small">
-                            {% trans %}This user has been assigned the permission template{% endtrans %}: <strong>"{{ user['tpl_name'] }}"</strong>
+                            {% trans %}This user has been assigned the access template{% endtrans %}: <strong>"{{ user['tpl_name'] }}"</strong>
                         </p>
 
                         {% if user['tpl_descr'] != "" %}
