--- a/templates/modern/add_supermaster.html
+++ b/templates/modern/add_supermaster.html
@@ -36,19 +36,11 @@
                             {% for user in users %}
                             {% if user['id'] == session_uid %}
                             <option value="{{ user['username'] }}" selected>
-                                {% if user['fullname'] %}
-                                {{ user['fullname'] }}
-                                {% else %}
-                                {{ user['username'] }}
-                                {% endif %}
+                                {% if user['fullname'] %}{{ user['fullname'] }} ({{ user['username'] }}){% else %}{{ user['username'] }}{% endif %}
                             </option>
                             {% elseif perm_view_others %}
                             <option value="{{ user['username'] }}">
-                                {% if user['fullname'] %}
-                                {{ user['fullname'] }}
-                                {% else %}
-                                {{ user['username'] }}
-                                {% endif %}
+                                {% if user['fullname'] %}{{ user['fullname'] }} ({{ user['username'] }}){% else %}{{ user['username'] }}{% endif %}
                             </option>
                             {% endif %}
                             {% endfor %}
