fix(ui): correct HTML tag pairing and attribute quotes in templates

--- a/templates/edit_zone_templ.html
+++ b/templates/edit_zone_templ.html
@@ -14,7 +14,7 @@
 </div>
 
 {% if records == "-1" %}
-<div class='text-secondary'>{% trans %}This zone template does not have any records yet.{% endtrans %}</div>
+<div class="text-secondary">{% trans %}This zone template does not have any records yet.{% endtrans %}</div>
 <br>
 <div><input class="btn btn-primary btn-sm" type="button"
             onClick="location.href='index.php?page=add_zone_templ_record&id={{zone_templ_id}}'"
