--- a/templates/list_zones.html
+++ b/templates/list_zones.html
@@ -142,7 +142,7 @@
     </table>
 
     {% if letter_start != 'all' %}
-    <div class='pb-3'>
+    <div class="pb-3">
         {{ pagination | raw }}
     </div>
     {% endif %}
