--- a/templates/default/list_reverse_zones.html
+++ b/templates/default/list_reverse_zones.html
@@ -236,7 +236,7 @@
                 </table>
             </div>
 
-            <div class='py-3'>
+            <div class="py-3">
                 {{ pagination | raw }}
             </div>
         </form>
